# design_of_mechanical_production

./: .gitignore  README.md  launch_config.json  pyproject.toml  pytest.ini  requirements.txt  settings.yaml  setup.cfg
.github/workflows/: python-tests.yml
design_of_mechanical_production/: __main__.py  config.py  launch_manager.py  launcher.py  main.py  plan.md  report 16-11 02-12-2021.docx  settings.yaml
design_of_mechanical_production/application/interfaces/: data_reader.py  report_generator.py
design_of_mechanical_production/core/entities/: __init__.py  area_calculator.py  equipment.py  equipment_factory.py  machine_info.py  machine_tool_source.py  operation.py  process.py  types.py  workshop.py  workshop_zone.py
design_of_mechanical_production/core/factories/: __init__.py  equipment_factory.py  workshop_zone_factory.py
design_of_mechanical_production/core/interfaces/: __init__.py  area_calculator.py  i_area_calculator.py  i_data_reader.py  i_equipment.py  i_equipment_factory.py  i_formatters.py  i_machine_info.py  i_operation.py  i_process.py  i_report_generator.py  i_workshop.py  i_workshop_zone.py  report_generator.py
design_of_mechanical_production/core/services/: __init__.py  operation_creator.py  process_creator.py  validation.py  workshop_creator.py
design_of_mechanical_production/data/input/: __init__.py  create_initial_data.py  excel_reader.py
design_of_mechanical_production/data/output/: __init__.py  formatters.py  text_report.py
design_of_mechanical_production/data/utils/: file_system.py
design_of_mechanical_production/domain/entities/: operation.py  process.py  worker.py  workshop.py  workshop_zone.py
design_of_mechanical_production/domain/services/: workshop_calculator.py
design_of_mechanical_production/entities/: __init__.py  area_calculator.py  equipment.py  equipment_factory.py  machine_info.py  machine_tool_source.py  operation.py  process.py  types.py  workshop.py  workshop_zone.py
design_of_mechanical_production/gui/: app.py  base_window.py  input_window.py  settings_window.py
design_of_mechanical_production/gui/components/: config.py  customized_spinner.py  customized_spinner_option.py  customized_text_input.py  event_manager.py  interfaces.py  machine_for_operations.py  machine_tool_suggest_field.py  machine_tools_cache.py  notification_window.py  row_factory.py  spinner_option.py  table.py  table1.py  table_row.py  time_input.py
design_of_mechanical_production/gui/windows/: __init__.py  base_window.py  input_window.py  result_window.py  result_window1.py  settings_window.py  template_window.py
design_of_mechanical_production/infrastructure/input/: excel_reader.py
design_of_mechanical_production/infrastructure/output/: text_report.py
design_of_mechanical_production/inputdata/: __init__.py  create_initial_data.py  excel_reader.py  initial_data.py  initial_data.xlsx
design_of_mechanical_production/interfaces/: __init__.py  area_calculator.py  data_reader.py  formatters.py  report_generator.py
design_of_mechanical_production/output/: __init__.py  formatters.py  report.txt  text_report.py
design_of_mechanical_production/output/kompas/: __init__.py
design_of_mechanical_production/output/textfile/: Output_of_calculation_results_for_milling.py  __init__.py  to_text_file.py
design_of_mechanical_production/processing/: __init__.py  calculation.py
design_of_mechanical_production/settings/: __init__.py  manager.py
design_of_mechanical_production/utils/machines/: __init__.py  finder.py  machine_map.py  machine_tool_operation_map.py
docs/: plan.md  report 16-09 08-12-2021.docx
inputdata/: initial_data.xlsx
output/: report.txt
settings/: machine_tools.env
tests/: __init__.py  test_area_calculator.py  test_equipment.py  test_machine_info.py  test_machine_tool_source.py  test_mocked_creator.py  test_operation.py  test_process.py  test_workshop.py  test_workshop_zone.py
tests/core/entities/: test_area_calculator.py  test_process.py  test_workshop.py
tests/core/services/: test_operation_creator.py  test_process_creator.py  test_validation.py  test_workshop_creator.py
(+8 files in other folders)
