[tool.poetry]
name = "design_of_mechanical_production"
version = "0.0.42"
description = "Расчет площади цеха"
authors = ["Andrey Nikolaevich Korenyuk <korenyuk.a.n@mail.ru>"]
readme = "README.md"
packages = [{ include = "design_of_mechanical_production" }]
license = "MIT"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Manufacturing",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.9",
    "Topic :: Scientific/Engineering",
]

[tool.poetry.dependencies]
python = ">=3.9,<4.0"
pandas = "2.2.3"
pyyaml = "6.0.2"
machine-tools = { git = "https://github.com/sad-engineer/machine_tools.git", rev = "dbf0d5ee591bb4edd80ccec91c53c041cc1728f5" }
kivy = "2.3.1"
kivymd = "1.2.0"
openpyxl = "3.1.5"
black = "25.1.0"
isort = "6.0.1"

[tool.poetry.scripts]
design-of-mechanical-production = "design_of_mechanical_production.main:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120
target-version = ['py39']
include = '\.pyi?$'
skip-string-normalization = true
extend-exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 120

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
