[metadata]
name = design_of_mechanical_production
version = 0.0.40
description = Расчет площади цеха
author = Andrey Nikolaevich Korenyuk
author_email = korenyuk.a.n@mail.ru
long_description = file: README.md
long_description_content_type = text/markdown

[options]
packages = find:
python_requires = >=3.9
install_requires =
    pandas>=2.2.3
    pyyaml>=6.0.2
    machine-tools @ git+https://github.com/sad-engineer/machine_tools.git@dbf0d5ee591bb4edd80ccec91c53c041cc1728f5
    kivy>=2.3.1
    kivymd>=1.2.0
    openpyxl>=3.1.5

[options.packages.find]
include = design_of_mechanical_production*

[bdist_wheel]
universal = 1

